# perl_k_means

./: README.md  Scatter.pm  install_gpu_modules.sh  iris_pca_scatter.pl
ML/: KMeans.pm  MVCUDA.pm  MVKernels.c  MVKernels.pm  MVROCM.pm  PCA.pm  Util.pm
amd_kernel/: CMakeLists.txt  KernelStatic.h  README.md  ROCMKernel.h  kernel.hip
nvidia_kernel/: CMakeLists.txt  CUDAKernel.h  README.md  kernel.cu
